--- a/XAI/XAI-Info.plist
+++ b/XAI/XAI-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>alibaba.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.xai.IHF</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
